style: fixed car title white space wrap

--- a/src/components/car-card/car_card.sass
+++ b/src/components/car-card/car_card.sass
@@ -61,6 +61,7 @@
     -webkit-box-shadow: 0 -2px 6px 0px rgba(0,0,0, .04)
     .card-title
         width: 50%
+        white-space: nowrap
         text-align: left
         overflow: hidden
         text-overflow: ellipsis
